chore : add packaages and configuration of ts and vite

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -26,9 +26,8 @@
       "@interfaces/*": ["src/interfaces/*"],
       "@utils/*": ["src/utils/*"],
       "@global/*": ["src/global/*"],
-      "@store/*": ["src/store/*"]
     },
-    "types": ["node", "react", "react-dom", "jest"]
+    "types": ["node", "react", "react-dom"]
   },
   "include": ["src", "**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules", "dist"]
