--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@prisma/client": "^5.17.0",
     "bcrypt": "^5.1.1",
+    "body-parser": "^1.20.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
@@ -24,6 +25,7 @@
     "mongodb": "^6.8.0",
     "npm": "^10.8.3",
     "passport": "^0.7.0",
+    "passport-github2": "^0.1.12",
     "passport-jwt": "^4.0.1"
   },
   "devDependencies": {
@@ -36,6 +38,7 @@
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.14.11",
     "@types/passport": "^1.0.16",
+    "@types/passport-github2": "^1.2.9",
     "dotenv-cli": "^7.4.2",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.4",
